--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ambimuhammad/amuha.git"
+    "url": "https://github.com/ambimuhammad/amuha"
   },
   "keywords": [
     "Rupiah",
@@ -19,5 +19,5 @@
   "bugs": {
     "url": "https://github.com/ambimuhammad/amuha/issues"
   },
-  "homepage": "https://github.com/ambimuhammad/amuha#readme"
+  "homepage": "https://github.com/ambimuhammad/amuha"
 }
